--- a/src/Isen.DotNet.Web/Views/City/Edit.cshtml
+++ b/src/Isen.DotNet.Web/Views/City/Edit.cshtml
@@ -1,5 +1,38 @@
 ﻿@{
     ViewData["Title"] = "Edition d'une ville";
 }
+@using Isen.DotNet.Library.Models
+@model City
 <h1>Edition d'une ville (formulaire)</h1>
 
+<div class="row">
+    <div class="col-12">
+        
+        <form class="form-group">
+            
+            <div class="form-group">
+                <label for="cityName">Nom de la ville</label>
+                <input id="cityName"
+                       type="text"
+                       class="form-control"
+                       placeholder="City name"
+                       value="@Model?.Name" />
+            </div>
+            
+            <div class="form-group">
+                <label for="cityZipCode">Code postal</label>
+                <input id="cityZipCode"
+                       type="text"
+                       class="form-control"
+                       placeholder="Zip code"
+                       value="@Model?.ZipCode" />
+            </div>
+
+            <button type="submit" class="btn btn-primary">Valider</button>
+            <a class="btn btn-secondary"
+               asp-controller="City" asp-action="Index">Annuler</a>
+
+        </form>
+
+    </div>
+</div>
