--- a/src/Isen.DotNet.Web/Views/City/Edit.cshtml
+++ b/src/Isen.DotNet.Web/Views/City/Edit.cshtml
@@ -20,6 +20,7 @@
                        type="text"
                        class="form-control"
                        placeholder="City name"
+                       asp-for="Name"
                        value="@Model?.Name" />
             </div>
             
@@ -29,6 +30,7 @@
                        type="text"
                        class="form-control"
                        placeholder="Zip code"
+                       asp-for="ZipCode"
                        value="@Model?.ZipCode" />
             </div>
 
