--- a/src/Isen.DotNet.Web/Views/Shared/_Layout.cshtml
+++ b/src/Isen.DotNet.Web/Views/Shared/_Layout.cshtml
@@ -44,20 +44,38 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-dark dropdown-toggle"
-                                data-toggle="dropdown"
-                                href="#" role="button"
-                                aria-haspopup="true"
-                                aria-expanded="false">Villes</a>
+                               data-toggle="dropdown"
+                               href="#" role="button"
+                               aria-haspopup="true"
+                               aria-expanded="false">Villes</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item"
-                                    asp-area="" 
-                                    asp-controller="City" 
-                                    asp-action="Index">Toutes</a>
+                                   asp-area="" 
+                                   asp-controller="City" 
+                                   asp-action="Index">Toutes</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item"
-                                    asp-area="" 
-                                    asp-controller="City" 
-                                    asp-action="Edit">Ajouter...</a>
+                                   asp-area="" 
+                                   asp-controller="City" 
+                                   asp-action="Edit">Ajouter...</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-dark dropdown-toggle"
+                               data-toggle="dropdown"
+                               href="#" role="button"
+                               aria-haspopup="true"
+                               aria-expanded="false">Personnes</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item"
+                                   asp-area="" 
+                                   asp-controller="Person" 
+                                   asp-action="Index">Toutes</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item"
+                                   asp-area="" 
+                                   asp-controller="Person" 
+                                   asp-action="Edit">Ajouter...</a>
                             </div>
                         </li>
                     </ul>
