forms Person ok

--- a/src/Isen.DotNet.Web/Views/City/Edit.cshtml
+++ b/src/Isen.DotNet.Web/Views/City/Edit.cshtml
@@ -12,7 +12,7 @@
             
             <input type="hidden" 
                    asp-for="Id"
-                   value="@Model.Id" />
+                   value="@Model?.Id" />
 
             <div class="form-group">
                 <label for="cityName">Nom de la ville</label>
