--- a/src/Isen.DotNet.Web/Views/Shared/_Layout.cshtml
+++ b/src/Isen.DotNet.Web/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
                                 <a class="dropdown-item"
                                    asp-area="" 
                                    asp-controller="City" 
+                                   asp-route-id=""
                                    asp-action="Edit">Ajouter...</a>
                             </div>
                         </li>
@@ -75,6 +76,7 @@
                                 <a class="dropdown-item"
                                    asp-area="" 
                                    asp-controller="Person" 
+                                   asp-route-id=""
                                    asp-action="Edit">Ajouter...</a>
                             </div>
                         </li>
