--- a/src/Isen.DotNet.Web/Views/Person/Index.cshtml
+++ b/src/Isen.DotNet.Web/Views/Person/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Toutes les villes";
+    ViewData["Title"] = "Toutes les Personnes";
 }
 @using Isen.DotNet.Library.Models
 @model IEnumerable<Person>
